# goods-delivery-drf

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.in  requirements.txt  setup.cfg
Deploy/: entrypoint.sh  nginx.conf  supervisor.conf
Project/: celery.py  settings.py  urls.py  wsgi.py
apps/accounts/: admin.py  api.py  exceptions.py  managers.py  models.py  otp.py  roles.py  serializers.py  sms_sender.py  tasks.py  validatiors.py  views.py
apps/accounts/factories/: user.py
apps/accounts/migrations/: 0001_initial.py
apps/measurement/: api.py  apps.py
apps/measurement/admin/: __init__.py  city.py  country.py  currency.py
apps/measurement/factories/: __init__.py  city.py  country.py  currency.py
apps/measurement/filters/: __init__.py  country.py  currency.py
apps/measurement/migrations/: 0001_initial.py
apps/measurement/models/: __init__.py  city.py  country.py  currency.py
apps/measurement/serializers/: __init__.py  city.py  country.py  currency.py
apps/measurement/views/: __init__.py  city.py  country.py  currency.py
apps/notifications/: api.py  tasks.py  validators.py
apps/notifications/admin/: __init__.py  device_token.py  push_template.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_devicetoken_is_enabled.py
apps/notifications/models/: __init__.py  device_token.py  push_template.py
apps/notifications/serializers/: __init__.py  device_token.py
apps/utils/admin/: __init__.py  (+1 more)
tests/: conftest.py
tests/test_api/: test_country.py  test_currency.py
tests/test_models/: test_user.py
(+13 files in other folders)
