[tool.poetry]
name = "goods-delivery-drf"
version = "0.1.0"
description = ""
authors = ["dgis-demo <69810134+dgis-demo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goods_delivery_drf"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.8"
faker = "9.3.1"
pytest-factoryboy = "2.1.0"
djangorestframework = "3.12.4"
djangorestframework-simplejwt = "5.0.0"
drf-spectacular = "0.20.2"
twilio = "7.1.0"
firebase-admin = "5.1.0"
ua-parser = "0.10.0"
django-daterangefilter = "1.0.0"
pytest = "6.2.5"
pytest-django = "4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
